--- a/app/package.json
+++ b/app/package.json
@@ -27,8 +27,10 @@
     "localforage": "^1.10.0",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "recharts": "^2.8.0",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
@@ -43,5 +45,10 @@
     "typescript": "~5.1.6",
     "vite": "~4.4.9",
     "vitest": "~0.33.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "echo 'Skipping pre-commit hook'"
+    }
   }
 }
