--- a/package.json
+++ b/package.json
@@ -54,5 +54,10 @@
     "bracketSameLine": false,
     "arrowParens": "always",
     "endOfLine": "lf"
+  },
+  "dependencies": {
+    "chart.js": "^4.4.0",
+    "react-chartjs-2": "^5.2.0",
+    "rechart": "^0.0.1"
   }
 }
