Working State Nov 16

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,5 +80,8 @@
     "webflow",
     "yarnpkg",
     "yarnrc"
-  ]
+  ],
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  }
 }
