--- a/app/package.json
+++ b/app/package.json
@@ -19,9 +19,11 @@
     "@babel/runtime": "^7.22.10",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/base": "^5.0.0-beta.23",
     "@mui/icons-material": "^5.14.3",
     "@mui/lab": "^5.0.0-alpha.140",
     "@mui/material": "^5.14.5",
+    "@mui/system": "5.14.17",
     "chart.js": "^4.4.0",
     "firebase": "^10.1.0",
     "localforage": "^1.10.0",
