--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
   },
   "dependencies": {
     "chart.js": "^4.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongodb": "^6.2.0",
     "react-chartjs-2": "^5.2.0",
     "rechart": "^0.0.1"
   }
