--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "vite serve",
+    "start": "vite serve --host 0.0.0.0 --port 5173",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest",
